capas de asignacion