@@ -4,6 +4,7 @@ import grupo5.donaciones.infraestructure.analizadores.ComparadorTexto;
 import grupo5.donaciones.models.entities.donaciones.matchmaking.algoritmos.AlgoritmoAsignacion;
 import grupo5.donaciones.models.entities.donaciones.matchmaking.algoritmos.AlgoritmoCompatibilidadSemantica;
 import grupo5.donaciones.models.entities.donaciones.matchmaking.algoritmos.AlgoritmoPrioridadSubAtendidos;
+import grupo5.donaciones.models.entities.donaciones.matchmaking.propuestas.EstadoPropuesta;
 import grupo5.donaciones.models.entities.donaciones.matchmaking.propuestas.Propuesta;
 import grupo5.donaciones.models.entities.donacionesIndependientes.DonacionIndependiente;
 import grupo5.donaciones.models.entities.necesidades.Necesidad;
@@ -14,17 +15,20 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import org.springframework.stereotype.Component;
+import java.util.UUID;
+import org.springframework.http.HttpStatus;
+import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
-@Component
-public class GestorAlgoritmos {
+@Service
+public class AlgoritmosService {
 
   private final List<AlgoritmoAsignacion> algoritmos;
   private final DonacionIndependienteRepository donacionRepository;
   private final NecesidadRepository necesidadRepository;
   private final PropuestaRepository propuestaRepository;
 
-  public GestorAlgoritmos(
+  public AlgoritmosService(
       DonacionIndependienteRepository donacionRepository,
       NecesidadRepository necesidadRepository,
       PropuestaRepository propuestaRepository,
@@ -48,6 +52,25 @@ public class GestorAlgoritmos {
     List<Propuesta> resultado = consolidar(propuesta1, propuesta2);
     resultado.forEach(propuestaRepository::save);
     return resultado;
+  }
+
+  public List<Propuesta> listarPropuestas() {
+    return propuestaRepository.findAll();
+  }
+
+  public void actualizarEstadoPropuesta(UUID id, EstadoPropuesta estado) {
+    Propuesta propuesta =
+        propuestaRepository
+            .findById(id)
+            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+    if (estado == EstadoPropuesta.APROBADA) {
+      propuesta.confirmar();
+    } else if (estado == EstadoPropuesta.DESCARTADA) {
+      propuesta.rechazar();
+    } else {
+      throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Estado invalido para transicion");
+    }
+    propuestaRepository.save(propuesta); // Save the updated proposal
   }
 
   private static List<Propuesta> consolidar(
@@ -74,7 +97,7 @@ public class GestorAlgoritmos {
   }
 
   private AlgoritmoAsignacion algoritmoPorCompatibilidad() {
-    return algoritmos.get(0);
+    return algoritmos.getFirst();
   }
 
   private AlgoritmoAsignacion algoritmoPorPrioridad() {
